--- a/Web/GreenCap.Web/GreenCap.Web.csproj
+++ b/Web/GreenCap.Web/GreenCap.Web.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
     <Folder Include="wwwroot\webfonts\" />
   </ItemGroup>
 </Project>
