add pagination to forum, change dto about home statistics

--- a/Web/GreenCap.Web.ViewModels/GreenCap.Web.ViewModels.csproj
+++ b/Web/GreenCap.Web.ViewModels/GreenCap.Web.ViewModels.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\..\Services\GreenCap.Services.Mapping\GreenCap.Services.Mapping.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Home\" />
+  </ItemGroup>
+
 </Project>
