--- a/Services/GreenCap.Services.Data/GreenCap.Services.Data.csproj
+++ b/Services/GreenCap.Services.Data/GreenCap.Services.Data.csproj
@@ -13,12 +13,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.261" PrivateAssets="all">
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.0" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.205" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
+
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.0" />
     <ProjectReference Include="..\..\Data\GreenCap.Data.Common\GreenCap.Data.Common.csproj" />
     <ProjectReference Include="..\..\Data\GreenCap.Data.Models\GreenCap.Data.Models.csproj" />
     <ProjectReference Include="..\..\Web\GreenCap.Web.ViewModels\GreenCap.Web.ViewModels.csproj" />
