delete form and confirm changes message

--- a/Web/GreenCap.Web/appsettings.json
+++ b/Web/GreenCap.Web/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=GreenCap;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "SendGrid": {
+    "ApiKey": "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"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
