--- a/Tests/GreenCap.Services.Data.Tests/GreenCap.Services.Data.Tests.csproj
+++ b/Tests/GreenCap.Services.Data.Tests/GreenCap.Services.Data.Tests.csproj
@@ -13,6 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.0-preview-20201123-03" />
     <PackageReference Include="Moq" Version="4.15.1" />
