--- a/Web/GreenCap.Web/appsettings.Development.json
+++ b/Web/GreenCap.Web/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "SendGrid": {
+    "ApiKey": "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"
   }
 }
