--- a/src/Services/GreenCap.Services.Data/GreenCap.Services.Data.csproj
+++ b/src/Services/GreenCap.Services.Data/GreenCap.Services.Data.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
@@ -14,16 +14,17 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.0" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.205" PrivateAssets="all">
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <ProjectReference Include="..\..\Data\GreenCap.Data.Common\GreenCap.Data.Common.csproj" />
     <ProjectReference Include="..\..\Data\GreenCap.Data.Models\GreenCap.Data.Models.csproj" />
+    <ProjectReference Include="..\..\GreenCap.Common\GreenCap.Common.csproj" />
     <ProjectReference Include="..\..\Web\GreenCap.Web.ViewModels\GreenCap.Web.ViewModels.csproj" />
     <ProjectReference Include="..\GreenCap.Services.Mapping\GreenCap.Services.Mapping.csproj" />
   </ItemGroup>
