--- a/CI_CD/docker-compose.yml
+++ b/CI_CD/docker-compose.yml
@@ -1,5 +1,7 @@
 version: "3.9"
+
 services:
+
   sonarqube:
     image: sonarqube:lts
     ports:
@@ -9,9 +11,14 @@ services:
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
       - sonarqube_bundled-plugins:/opt/sonarqube/lib/bundled-plugins
+    environment:
+      - sonar.jdbc.username=admin
+      - sonar.jdbc.password=sonar
+      - sonar.jdbc.url=jdbc:postgresql://db:5432/sonar
     networks:
       - mynetwork
     restart: unless-stopped
+
   jenkins:
     image: jenkins/jenkins:lts
     ports:
@@ -21,14 +28,28 @@ services:
     networks:
       - mynetwork
     restart: unless-stopped
+
+  db:
+    image: postgres
+    networks:
+      - mynetwork
+    environment:
+      - POSTGRES_USER=sonar
+      - POSTGRES_PASSWORD=sonar
+    volumes:
+      - postgresql:/var/lib/postgresql
+      - postgresql_data:/var/lib/postgresql/data
+    restart: unless-stopped
+
 networks:
   mynetwork:
+      driver: bridge
 
 volumes:
   sonarqube_conf:
   sonarqube_data:
   sonarqube_extensions:
   sonarqube_bundled-plugins:
+  postgresql:
+  postgresql_data:
   jenkins_data:
-
-
